--- a/src/index.html
+++ b/src/index.html
@@ -8,8 +8,29 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,600&display=swap" rel="stylesheet">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+  <!-- Google Maps JavaScript library -->
+  <script src="https://maps.googleapis.com/maps/api/js?v=3.exp&libraries=places&key=AIzaSyCEUpMCzyUSq20aQbmtH90UvrQZUvGyQkg"></script>
+  <script src="https://polyfill.io/v3/polyfill.min.js?features=default"></script>
 </head>
 <body>
   <app-root></app-root>
+  <script>
+    var searchInput = 'search_input';
+     
+    $(document).ready(function () {
+     var autocomplete;
+     autocomplete = new google.maps.places.Autocomplete((document.getElementById(searchInput)), {
+      types: ['geocode'],
+      /*componentRestrictions: {
+       country: "USA"
+      }*/
+     });
+      
+     google.maps.event.addListener(autocomplete, 'place_changed', function () {
+      var near_place = autocomplete.getPlace();
+     });
+    });
+    </script>
 </body>
 </html>
