done search functionality

--- a/src/index.html
+++ b/src/index.html
@@ -12,6 +12,8 @@
   <!-- Google Maps JavaScript library -->
   <script src="https://maps.googleapis.com/maps/api/js?v=3.exp&libraries=places&key=AIzaSyCEUpMCzyUSq20aQbmtH90UvrQZUvGyQkg"></script>
   <script src="https://polyfill.io/v3/polyfill.min.js?features=default"></script>
+  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCEUpMCzyUSq20aQbmtH90UvrQZUvGyQkg" 
+    type="text/javascript"></script>
 </head>
 <body>
   <app-root></app-root>
